samples/samples/syntax_errors/fnc_error.epl
fnc Main_(): 344 {}
fnc main():

fnc Main() {
    Main_();
    main();
}